--- a/about.html
+++ b/about.html
@@ -96,7 +96,9 @@
     <!-- Logo & Description -->
     <div class="footer-section">
       <h3 class="footer-logo">RooTed DBN</h3>
-      <p>Empowering youth and teens to grow in faith, build community, and discover their purpose in Christ.</p>
+      <p>Empowering youth and teens <br>
+        to grow in faith, build community,<br>
+        and discover their purpose in Christ.</p>
     </div>
 
     <!-- Quick Links -->
