--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
     <!-- Event 1 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Friday Night Fellowship" />
+        <img src="images/event1.png" alt="Friday Night Fellowship" />
         <span class="badge both">Both</span>
       </div>
       <div class="event-content">
@@ -57,7 +57,7 @@
     <!-- Event 2 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15" alt="Teen Bible Study Marathon" />
+        <img src="images/event2.png" alt="Teen Bible Study Marathon" />
         <span class="badge teen">Teen</span>
       </div>
       <div class="event-content">
@@ -76,7 +76,7 @@
     <!-- Event 3 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Youth Leadership Conference" />
+        <img src="images/rootedevent2.png" alt="Youth Leadership Conference" />
         <span class="badge youth">Youth</span>
       </div>
       <div class="event-content">
@@ -95,7 +95,7 @@
     <!-- Event 4 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1521336575822-6da63fb45455" alt="Worship Night" />
+        <img src="images/event2.png" alt="Worship Night" />
         <span class="badge both">Both</span>
       </div>
       <div class="event-content">
@@ -114,7 +114,7 @@
     <!-- Event 5 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1485217988980-11786ced9454" alt="Youth Outreach Day" />
+        <img src="images/rootedevent4.png" alt="Youth Outreach Day" />
         <span class="badge youth">Youth</span>
       </div>
       <div class="event-content">
@@ -133,7 +133,7 @@
     <!-- Event 6 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1503264116251-35a269479413" alt="Christmas Celebration" />
+        <img src="images/rootedevent8.png" alt="Christmas Celebration" />
         <span class="badge teen">Teen</span>
       </div>
       <div class="event-content">
@@ -149,10 +149,10 @@
       </div>
     </div>
 
-     <!-- Event 1 -->
+     <!-- Event 7 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Friday Night Fellowship" />
+        <img src="images/event1.png" alt="Friday Night Fellowship" />
         <span class="badge both">Both</span>
       </div>
       <div class="event-content">
@@ -168,10 +168,10 @@
       </div>
     </div>
 
-    <!-- Event 2 -->
+    <!-- Event 8 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15" alt="Teen Bible Study Marathon" />
+        <img src="images/hero-rooted.png" alt="Teen Bible Study Marathon" />
         <span class="badge teen">Teen</span>
       </div>
       <div class="event-content">
@@ -187,10 +187,10 @@
       </div>
     </div>
 
-    <!-- Event 3 -->
+    <!-- Event 9 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Youth Leadership Conference" />
+        <img src="images/event2.png" alt="Youth Leadership Conference" />
         <span class="badge youth">Youth</span>
       </div>
       <div class="event-content">
