--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       </div>
     </div>
 
+  
     <div class="hero-image">
-      <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Youth Image" />
-      <div class="stat-card top-right">
+      <img src="images/hero-rooted.png" alt="Youth Image" />
+     <!--   <div class="stat-card top-right">
         <h4>Events This Year</h4>
         <p>42+</p>
       </div>
@@ -52,8 +53,8 @@
         <p>250+</p>
       </div>
     </div>
-  </section>
-
+  -->
+</section>
 
 <!-- Upcoming Events Section -->
 <section class="events">
@@ -68,7 +69,7 @@
     <!-- Event 1 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Friday Night Fellowship" />
+        <img src="images/event1.png" alt="Friday Night Fellowship" />
         <span class="badge both">Both</span>
       </div>
       <div class="event-content">
@@ -87,7 +88,7 @@
     <!-- Event 2 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15" alt="Teen Bible Study Marathon" />
+        <img src="images/event2.png" alt="Teen Bible Study Marathon" />
         <span class="badge teen">Teen</span>
       </div>
       <div class="event-content">
@@ -106,7 +107,7 @@
     <!-- Event 3 -->
     <div class="event-card">
       <div class="event-image">
-        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Youth Leadership Conference" />
+        <img src="images/gaming-1.png" alt="Youth Leadership Conference" />
         <span class="badge youth">Youth</span>
       </div>
       <div class="event-content">
@@ -223,7 +224,7 @@
   <h3><i class="fa-solid fa-chart-line"></i> Fundraising Progress</h3>
   <p>Help us reach our goal to expand our programs</p>
   <div class="amounts">
-    <span id="raisedAmount">R24,750</span>
+    <span id="raisedAmount">R0</span>
     <span>of R50,000 goal</span>
   </div>
   <div class="progress-bar">
